// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a queue 1`] = `
Object {
  "resources": Array [
    Object {
      "attrs": Object {},
      "inbound": Array [],
      "outbound": Array [],
      "path": "main/my_queue",
      "props": Object {
        "initialMessages": Array [],
        "subscribers": Array [],
        "timeout": 30,
      },
      "type": "wingsdk.cloud.Queue",
    },
  ],
  "sdkVersion": "0.0.0",
}
`;

exports[`messages are requeued if the function fails 1`] = `
Object {
  "resources": Array [
    Object {
      "attrs": Object {},
      "inbound": Array [
        "main/my_queue",
      ],
      "outbound": Array [],
      "path": "main/my_queue/OnMessage-236ff3d72ad0ae46",
      "props": Object {
        "environmentVariables": Object {},
        "sourceCodeFile": "assets/OnMessage-236ff3d72ad0ae46/index.js",
        "sourceCodeLanguage": "javascript",
      },
      "type": "wingsdk.cloud.Function",
    },
    Object {
      "attrs": Object {},
      "inbound": Array [],
      "outbound": Array [
        "main/my_queue/OnMessage-236ff3d72ad0ae46",
      ],
      "path": "main/my_queue",
      "props": Object {
        "initialMessages": Array [],
        "subscribers": Array [
          Object {
            "batchSize": 1,
            "functionHandle": "\${main/my_queue/OnMessage-236ff3d72ad0ae46#attrs.handle}",
          },
        ],
        "timeout": 30,
      },
      "type": "wingsdk.cloud.Queue",
    },
  ],
  "sdkVersion": "0.0.0",
}
`;

exports[`queue with one subscriber, batch size of 5 1`] = `
Object {
  "resources": Array [
    Object {
      "attrs": Object {},
      "inbound": Array [
        "main/my_queue",
      ],
      "outbound": Array [],
      "path": "main/my_queue/OnMessage-236ff3d72ad0ae46",
      "props": Object {
        "environmentVariables": Object {},
        "sourceCodeFile": "assets/OnMessage-236ff3d72ad0ae46/index.js",
        "sourceCodeLanguage": "javascript",
      },
      "type": "wingsdk.cloud.Function",
    },
    Object {
      "attrs": Object {},
      "inbound": Array [],
      "outbound": Array [
        "main/my_queue/OnMessage-236ff3d72ad0ae46",
      ],
      "path": "main/my_queue",
      "props": Object {
        "initialMessages": Array [
          "A",
          "B",
          "C",
          "D",
          "E",
          "F",
        ],
        "subscribers": Array [
          Object {
            "batchSize": 5,
            "functionHandle": "\${main/my_queue/OnMessage-236ff3d72ad0ae46#attrs.handle}",
          },
        ],
        "timeout": 30,
      },
      "type": "wingsdk.cloud.Queue",
    },
  ],
  "sdkVersion": "0.0.0",
}
`;

exports[`queue with one subscriber, default batch size of 1 1`] = `
Object {
  "resources": Array [
    Object {
      "attrs": Object {},
      "inbound": Array [
        "main/my_queue",
      ],
      "outbound": Array [],
      "path": "main/my_queue/OnMessage-236ff3d72ad0ae46",
      "props": Object {
        "environmentVariables": Object {},
        "sourceCodeFile": "assets/OnMessage-236ff3d72ad0ae46/index.js",
        "sourceCodeLanguage": "javascript",
      },
      "type": "wingsdk.cloud.Function",
    },
    Object {
      "attrs": Object {},
      "inbound": Array [],
      "outbound": Array [
        "main/my_queue/OnMessage-236ff3d72ad0ae46",
      ],
      "path": "main/my_queue",
      "props": Object {
        "initialMessages": Array [],
        "subscribers": Array [
          Object {
            "batchSize": 1,
            "functionHandle": "\${main/my_queue/OnMessage-236ff3d72ad0ae46#attrs.handle}",
          },
        ],
        "timeout": 30,
      },
      "type": "wingsdk.cloud.Queue",
    },
  ],
  "sdkVersion": "0.0.0",
}
`;
